--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p>Hi, my name is Shrijan Singh. I am a Indian student of Computer Science & Engineering. I have been pursing my B. Tech from C. V. Raman Global University and putting it into practice at the same time through small projects developed.</p>
       <p>I have studied HTML, CSS and JavaScript and immersed myself in this area. I intend to take other courses and increasingly specialize in the Full Stack Web Development.</p>
       <!--       <a href="#">Contact Me</a> -->
-      <a href="#" target="blanck" download>Download CV</a>
+<!--       <a href="#" target="blanck" download>Download CV</a> -->
     </div>
   </div>
 
